upgraded to materialize-css v1.0.0, wait for @type PR: https://github.com/DefinitelyTyped/DefinitelyTyped/pull/25492 before deploying it.

--- a/.babelrc
+++ b/.babelrc
@@ -10,5 +10,16 @@
         "react-hot-loader/babel"
       ]
     }
-  }
+  },
+  "plugins": [
+    [
+      "transform-runtime",
+      {
+        "helpers": false,
+        "polyfill": false,
+        "regenerator": true,
+        "moduleName": "babel-runtime"
+      }
+    ]
+  ]
 }
