--- a/package.json
+++ b/package.json
@@ -27,27 +27,28 @@
   "dependencies": {
     "@types/express": "4.11.1",
     "@types/history": "4.6.2",
-    "@types/jest": "22.2.2",
-    "@types/materialize-css": "0.100.4",
+    "@types/jest": "22.2.3",
+    "@types/materialize-css": "1.0.2",
     "@types/node-uuid": "0.0.28",
     "@types/prismjs": "1.9.0",
-    "@types/react": "16.0.41",
-    "@types/react-dom": "16.0.4",
-    "@types/react-redux": "5.0.15",
-    "@types/react-router": "4.0.23",
-    "@types/react-router-dom": "4.2.5",
+    "@types/react": "16.3.13",
+    "@types/react-dom": "16.0.5",
+    "@types/react-redux": "5.0.19",
+    "@types/react-router": "4.0.24",
+    "@types/react-router-dom": "4.2.6",
     "@types/redux-devtools": "3.0.43",
     "@types/redux-devtools-dock-monitor": "1.1.32",
     "@types/redux-devtools-log-monitor": "1.0.33",
-    "@types/redux-logger": "3.0.5",
-    "@types/superagent": "3.5.7",
-    "@types/webpack": "4.1.2",
-    "@types/webpack-env": "1.13.5",
+    "@types/redux-logger": "3.0.6",
+    "@types/superagent": "3.5.8",
+    "@types/uuid": "3.4.3",
+    "@types/webpack": "4.1.4",
+    "@types/webpack-env": "1.13.6",
     "add-asset-html-webpack-plugin": "2.1.3",
-    "autoprefixer": "8.2.0",
-    "awesome-typescript-loader": "5.0.0-1",
+    "autoprefixer": "8.4.1",
+    "awesome-typescript-loader": "5.0.0",
     "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
@@ -55,50 +56,50 @@
     "babel-preset-stage-0": "6.24.1",
     "babel-register": "6.26.0",
     "body-parser": "1.18.2",
-    "colors": "1.2.1",
+    "colors": "1.2.4",
     "compression": "1.7.2",
     "connect-redis": "3.3.3",
     "connected-react-router": "4.3.0",
     "cookie-parser": "1.4.3",
-    "coveralls": "3.0.0",
+    "coveralls": "3.0.1",
     "cross-env": "5.1.4",
     "css-loader": "0.28.11",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-import-resolver-webpack": "0.8.4",
-    "eslint-plugin-import": "2.9.0",
+    "eslint-import-resolver-webpack": "0.9.0",
+    "eslint-plugin-import": "2.11.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
     "express": "4.16.3",
     "express-session": "1.15.6",
-    "extract-text-webpack-plugin": "next",
     "file-loader": "1.1.11",
     "helmet": "3.12.0",
     "history": "4.7.2",
-    "html-webpack-plugin": "3.1.0",
+    "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
-    "image-webpack-loader": "3.6.0",
+    "image-webpack-loader": "4.2.0",
     "immutable": "4.0.0-rc.9",
     "jest": "22.4.3",
-    "lodash": "4.17.5",
+    "lodash": "4.17.10",
     "material-design-icons": "3.0.1",
-    "materialize-css": "0.100.2",
+    "materialize-css": "1.0.0-rc.1",
+    "mini-css-extract-plugin": "0.4.0",
     "morgan": "1.9.0",
-    "node-sass": "4.8.3",
-    "node-uuid": "1.4.8",
-    "nodemon": "1.17.2",
-    "offline-plugin": "4.9.0",
-    "pg": "7.4.1",
-    "postcss": "6.0.21",
+    "node-sass": "4.9.0",
+    "nodemon": "1.17.4",
+    "offline-plugin": "5.0.3",
+    "optimize-css-assets-webpack-plugin": "4.0.1",
+    "pg": "7.4.2",
+    "postcss": "6.0.22",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.3",
-    "prismjs": "1.13.0",
+    "postcss-loader": "2.1.5",
+    "prismjs": "1.14.0",
     "progress-bar-webpack-plugin": "1.11.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-hot-loader": "4.0.0",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "react-hot-loader": "4.1.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
@@ -108,24 +109,25 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "2.2.0",
     "run-sequence": "2.2.1",
-    "sass-loader": "6.0.7",
-    "style-loader": "0.20.3",
-    "stylelint": "9.1.3",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21.0",
+    "stylelint": "9.2.0",
     "stylelint-config-standard": "18.2.0",
-    "superagent": "3.8.2",
-    "ts-jest": "22.4.2",
-    "ts-loader": "4.1.0",
-    "tslint": "5.9.1",
+    "superagent": "3.8.3",
+    "ts-jest": "22.4.5",
+    "ts-loader": "4.2.0",
+    "tslint": "5.10.0",
     "tslint-react": "3.5.1",
-    "typescript": "2.7.2",
-    "uglify-js": "3.3.16",
-    "uglifyjs-webpack-plugin": "1.2.4",
+    "typescript": "2.8.3",
+    "uglify-js": "3.3.23",
+    "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "1.0.1",
-    "webpack": "4.2.0",
+    "uuid": "3.2.1",
+    "webpack": "4.7.0",
     "webpack-bundle-analyzer": "2.11.1",
-    "webpack-cli": "2.0.13",
-    "webpack-dev-middleware": "3.0.1",
-    "webpack-hot-middleware": "2.21.2",
+    "webpack-cli": "2.1.3",
+    "webpack-dev-middleware": "3.1.3",
+    "webpack-hot-middleware": "2.22.1",
     "webpack-merge": "4.1.2",
     "webpack-pwa-manifest": "3.6.2"
   },
