Feature(redux): add support for redux v4.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ $RECYCLE.BIN/
 
 # Editor config folder
 .idea/
-.vscode/
+.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
