--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "eslint": "eslint -f codeframe \"**/*.js\"",
     "tslint": "tslint -t codeFrame \"**/*.tsx\"",
     "stylelint": "stylelint \"**/*.css **/*.sass **/*.scss\"",
+    "lint": "yarn eslint && yarn tslint && yarn stylelint",
     "clean": "rm -rf frontend/dist .awcache coverage",
     "test": "jest --no-cache --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "deploy": "heroku container:push web",
-    "precommit": "yarn eslint && yarn tslint && yarn stylelint",
+    "precommit": "yarn lint",
     "prepush": "yarn test && yarn coverage"
   },
   "dependencies": {
@@ -72,7 +73,7 @@
     "history": "4.7.2",
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
-    "image-webpack-loader": "3.6.0",
+    "image-webpack-loader": "4.3.1",
     "immutable": "4.0.0-rc.9",
     "jest": "23.3.0",
     "material-design-icons": "3.0.1",
@@ -85,7 +86,6 @@
     "optimize-css-assets-webpack-plugin": "4.0.3",
     "pg": "7.4.3",
     "postcss": "6.0.23",
-    "postcss-cssnext": "3.1.0",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.5",
     "postcss-preset-env": "5.2.1",
