--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "clean": "rm -rf frontend/dist .awcache coverage",
     "test": "jest --no-cache --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "deploy": "heroku container:push web",
-    "precommit": "yarn lint",
-    "prepush": "yarn test && yarn coverage"
+    "deploy": "heroku container:push web"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
+      "pre-push": "yarn test && yarn coverage"
+    }
   },
   "dependencies": {
     "@types/jest": "23.1.4",
@@ -44,7 +49,7 @@
     "awesome-typescript-loader": "5.2.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
-    "babel-loader": "7.1.4",
+    "babel-loader": "7.1.5",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
@@ -52,6 +57,8 @@
     "babel-register": "6.26.0",
     "body-parser": "1.18.3",
     "colors": "1.3.0",
+    "commitlint": "7.0.0",
+    "commitlint-config-armour": "1.0.4",
     "compression": "1.7.2",
     "connect-redis": "3.3.3",
     "connected-react-router": "4.3.0",
@@ -72,7 +79,7 @@
     "helmet": "3.12.1",
     "history": "4.7.2",
     "html-webpack-plugin": "3.2.0",
-    "husky": "0.14.3",
+    "husky": "1.0.0-rc.12",
     "image-webpack-loader": "4.3.1",
     "immutable": "4.0.0-rc.9",
     "jest": "23.3.0",
@@ -80,7 +87,7 @@
     "materialize-css": "1.0.0-rc.2",
     "mini-css-extract-plugin": "0.4.1",
     "morgan": "1.9.0",
-    "node-sass": "4.9.0",
+    "node-sass": "4.9.1",
     "nodemon": "1.17.5",
     "offline-plugin": "5.0.5",
     "optimize-css-assets-webpack-plugin": "4.0.3",
@@ -117,7 +124,7 @@
     "uglifyjs-webpack-plugin": "1.2.7",
     "url-loader": "1.0.1",
     "uuid": "3.3.2",
-    "webpack": "4.15.0",
+    "webpack": "4.15.1",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "3.0.8",
     "webpack-dev-middleware": "3.1.3",
