--- a/package.json
+++ b/package.json
@@ -31,106 +31,107 @@
     }
   },
   "dependencies": {
-    "@types/jest": "23.1.4",
-    "@types/materialize-css": "1.0.3",
-    "@types/prismjs": "1.9.0",
-    "@types/react": "16.4.6",
-    "@types/react-dom": "16.0.6",
-    "@types/react-redux": "6.0.3",
-    "@types/react-router-dom": "4.2.7",
-    "@types/redux-devtools": "3.0.44",
-    "@types/redux-devtools-dock-monitor": "1.1.32",
-    "@types/redux-devtools-log-monitor": "1.0.33",
-    "@types/redux-logger": "3.0.6",
-    "@types/superagent": "3.8.1",
-    "@types/uuid": "3.4.3",
-    "@types/webpack-env": "1.13.6",
-    "add-asset-html-webpack-plugin": "2.1.3",
-    "awesome-typescript-loader": "5.2.0",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "babel-register": "6.26.0",
-    "body-parser": "1.18.3",
-    "colors": "1.3.0",
-    "commitlint": "7.0.0",
-    "commitlint-config-armour": "1.0.4",
-    "compression": "1.7.2",
-    "connect-redis": "3.3.3",
-    "connected-react-router": "4.3.0",
-    "cookie-parser": "1.4.3",
-    "coveralls": "3.0.2",
-    "cross-env": "5.2.0",
-    "css-loader": "0.28.11",
-    "duplicate-package-checker-webpack-plugin": "3.0.0",
-    "eslint": "5.0.1",
-    "eslint-config-airbnb": "17.0.0",
-    "eslint-import-resolver-webpack": "0.10.1",
-    "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-jsx-a11y": "6.1.0",
-    "eslint-plugin-react": "7.10.0",
-    "express": "4.16.3",
-    "express-session": "1.15.6",
-    "file-loader": "1.1.11",
-    "helmet": "3.12.1",
-    "history": "4.7.2",
-    "html-webpack-plugin": "3.2.0",
-    "husky": "1.0.0-rc.12",
-    "image-webpack-loader": "4.3.1",
+    "@types/jest": "^23.1.5",
+    "@types/materialize-css": "^1.0.4",
+    "@types/prismjs": "^1.9.0",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.4",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/redux-devtools": "^3.0.44",
+    "@types/redux-devtools-dock-monitor": "^1.1.32",
+    "@types/redux-devtools-log-monitor": "^1.0.33",
+    "@types/redux-logger": "^3.0.6",
+    "@types/superagent": "^3.8.2",
+    "@types/uuid": "^3.4.3",
+    "@types/webpack-env": "^1.13.6",
+    "add-asset-html-webpack-plugin": "^2.1.3",
+    "awesome-typescript-loader": "^5.2.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.18.3",
+    "colors": "^1.3.0",
+    "commitlint": "^7.0.0",
+    "commitlint-config-armour": "^1.0.4",
+    "compression": "^1.7.2",
+    "connect-redis": "^3.3.3",
+    "connected-react-router": "^4.3.0",
+    "cookie-parser": "^1.4.3",
+    "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.0.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-react": "^7.10.0",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "file-loader": "^1.1.11",
+    "helmet": "^3.12.1",
+    "history": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "1.0.0-rc.13",
+    "image-webpack-loader": "^4.3.1",
     "immutable": "4.0.0-rc.9",
-    "jest": "23.3.0",
-    "material-design-icons": "3.0.1",
+    "jest": "^23.3.0",
+    "material-design-icons": "^3.0.1",
     "materialize-css": "1.0.0-rc.2",
-    "mini-css-extract-plugin": "0.4.1",
-    "morgan": "1.9.0",
-    "node-sass": "4.9.1",
-    "nodemon": "1.17.5",
-    "offline-plugin": "5.0.5",
-    "optimize-css-assets-webpack-plugin": "4.0.3",
-    "pg": "7.4.3",
-    "postcss": "6.0.23",
-    "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.5",
-    "postcss-preset-env": "5.2.1",
-    "prismjs": "1.15.0",
-    "progress-bar-webpack-plugin": "1.11.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "react-hot-loader": "4.3.3",
-    "react-redux": "5.0.7",
-    "react-router-dom": "4.3.1",
-    "redux": "4.0.0",
-    "redux-devtools": "3.4.1",
-    "redux-devtools-dock-monitor": "1.1.3",
-    "redux-devtools-log-monitor": "1.4.0",
-    "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0",
-    "run-sequence": "2.2.1",
-    "sass-loader": "7.0.3",
-    "style-loader": "0.21.0",
-    "stylelint": "9.3.0",
-    "stylelint-config-standard": "18.2.0",
-    "superagent": "3.8.3",
-    "ts-jest": "23.0.0",
-    "ts-loader": "4.4.2",
-    "tslint": "5.10.0",
-    "tslint-react": "3.6.0",
-    "typescript": "2.9.2",
-    "uglify-js": "3.4.3",
-    "uglifyjs-webpack-plugin": "1.2.7",
-    "url-loader": "1.0.1",
-    "uuid": "3.3.2",
-    "webpack": "4.15.1",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.0.8",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-hot-middleware": "2.22.2",
-    "webpack-merge": "4.1.3",
-    "webpack-pwa-manifest": "3.6.2"
+    "mini-css-extract-plugin": "^0.4.1",
+    "morgan": "^1.9.0",
+    "node-sass": "^4.9.2",
+    "nodemon": "^1.17.5",
+    "offline-plugin": "^5.0.5",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
+    "pg": "^7.4.3",
+    "postcss": "^6.0.23",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.5",
+    "postcss-preset-env": "^5.2.1",
+    "prismjs": "^1.15.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.3.3",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "run-sequence": "^2.2.1",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "stylelint": "^9.3.0",
+    "stylelint-config-standard": "^18.2.0",
+    "superagent": "^3.8.3",
+    "ts-jest": "^23.0.0",
+    "ts-loader": "^4.4.2",
+    "tslint": "^5.10.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^2.9.2",
+    "uglify-js": "^3.4.4",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.0.1",
+    "uuid": "^3.3.2",
+    "webpack": "^4.15.1",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-merge": "^4.1.3",
+    "webpack-pwa-manifest": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
