Build(clean): fix cross platfrom issue for "rm" command

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "tslint": "tslint -t codeFrame \"**/*.tsx\"",
     "stylelint": "stylelint \"**/*.css **/*.sass **/*.scss\"",
     "lint": "yarn eslint && yarn tslint && yarn stylelint",
-    "clean": "rm -rf frontend/dist .awcache coverage",
+    "clean": "rm-cli -r frontend/dist .awcache coverage",
     "test": "jest --no-cache --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "deploy": "heroku container:push web"
@@ -83,19 +83,19 @@
     "husky": "1.0.0-rc.13",
     "image-webpack-loader": "^4.3.1",
     "immutable": "4.0.0-rc.9",
-    "jest": "^23.3.0",
+    "jest": "^23.4.0",
     "material-design-icons": "^3.0.1",
     "materialize-css": "1.0.0-rc.2",
     "mini-css-extract-plugin": "^0.4.1",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.2",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.0",
     "offline-plugin": "^5.0.5",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
     "pg": "^7.4.3",
     "postcss": "^6.0.23",
     "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.5",
+    "postcss-loader": "^2.1.6",
     "postcss-preset-env": "^5.2.1",
     "prismjs": "^1.15.0",
     "progress-bar-webpack-plugin": "^1.11.0",
@@ -110,6 +110,7 @@
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "rm-cli": "^1.4.2",
     "run-sequence": "^2.2.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
