--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   "author": "Chong Guo <armourcy@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn dll && cross-env NODE_ENV=development yarn server",
-    "prod": "yarn build && cross-env NODE_ENV=production yarn server",
+    "dev": "yarn dll && cross-env NODE_ENV=development yarn serve",
+    "prod": "yarn build && cross-env NODE_ENV=production yarn serve",
     "dll": "yarn clean && cross-env NODE_ENV=production webpack --config webpack.config.dll.babel.js",
     "build": "yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.prod.babel.js",
     "profile": "yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.profile.babel.js",
-    "server": "nodemon --exec babel-node backend/server.js",
+    "serve": "nodemon --exec babel-node backend/server.js",
     "eslint": "eslint -f codeframe \"**/*.js\"",
     "tslint": "tslint -t codeFrame \"**/*.tsx\"",
     "stylelint": "stylelint \"**/*.css **/*.sass **/*.scss\"",
     "lint": "yarn eslint && yarn tslint && yarn stylelint",
-    "clean": "rm-cli -r frontend/dist .awcache coverage",
+    "clean": "trash frontend/dist .awcache coverage",
     "test": "jest --no-cache --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "deploy": "heroku container:push web"
@@ -66,7 +66,7 @@
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.0.0",
+    "cssnano": "^4.0.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "eslint": "^5.1.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -89,7 +89,7 @@
     "mini-css-extract-plugin": "^0.4.1",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.2",
-    "nodemon": "^1.18.0",
+    "nodemon": "^1.18.1",
     "offline-plugin": "^5.0.5",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
     "pg": "^7.4.3",
@@ -110,13 +110,13 @@
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "rm-cli": "^1.4.2",
     "run-sequence": "^2.2.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "superagent": "^3.8.3",
+    "trash-cli": "^1.4.0",
     "ts-jest": "^23.0.0",
     "ts-loader": "^4.4.2",
     "tslint": "^5.10.0",
@@ -126,7 +126,7 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "uuid": "^3.3.2",
-    "webpack": "^4.15.1",
+    "webpack": "^4.16.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
