Feature: add various new features and improve project structure, please see below list for detail
- add RESTful API support
- add webpack-dev-server support
- use react-saga instead of react-thunk
- use google hosted material-design-icons
- update all types and interfaces
- append 'Container' suffix to all containers file
- use react-devtools Chrome extension
- remove skipped backend tests
- move all react component styles to sass file style
- update sass files for better mobile display
- add random 404 page images
- fix webpack config file sourceMap and image-webpack-loader issue
- update dependencies
- update README.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "frontend/src",
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "target": "es5",
     "lib": [
-      "es6",
       "dom",
-      "dom.iterable"
+      "dom.iterable",
+      "es2015",
+      "es2015.iterable"
     ],
     "jsx": "react",
     "alwaysStrict": true,
@@ -26,5 +27,8 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
