--- a/.eslintrc
+++ b/.eslintrc
@@ -17,10 +17,24 @@
     "import/no-unresolved": "error",
     "import/no-webpack-loader-syntax": "error",
     "import/prefer-default-export": "off",
-    "indent": ["error", 2],
     "linebreak-style": "off",
     "max-len": "off",
-    "no-console": "warn",
-    "quotes": ["error", "single", { "allowTemplateLiterals": true }]
+    "no-console": [
+      "error",
+      {
+        "allow": [
+          "warn",
+          "error",
+          "info"
+        ]
+      }
+    ],
+    "quotes": [
+      "error",
+      "single",
+      {
+        "allowTemplateLiterals": true
+      }
+    ]
   }
 }
