--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   "author": "Chong Guo <armourcy@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn dll && cross-env NODE_ENV=development yarn serve",
-    "prod": "yarn build && cross-env NODE_ENV=production yarn serve",
-    "dll": "yarn clean && cross-env NODE_ENV=production webpack --config webpack.config.dll.babel.js",
-    "build": "yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.prod.babel.js",
-    "profile": "yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.profile.babel.js",
-    "serve": "nodemon --exec babel-node backend/server.js",
+    "clean": "trash frontend/dist .awcache coverage",
+    "dll": "cross-env NODE_ENV=production webpack --config webpack.config.dll.babel.js",
+    "dev": "yarn clean && yarn dll && concurrently --raw \"yarn dev-server\" \"yarn dev-client\"",
+    "dev-server": "cross-env NODE_ENV=development nodemon --exec babel-node backend/server.js",
+    "dev-client": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.babel.js",
+    "prod": "yarn build && yarn serve",
+    "build": "yarn clean && yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.prod.babel.js",
+    "serve": "cross-env NODE_ENV=production nodemon --exec babel-node backend/server.js",
+    "profile": "yarn clean && yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.profile.babel.js",
     "eslint": "eslint -f codeframe \"**/*.js\"",
     "tslint": "tslint -t codeFrame \"**/*.tsx\"",
     "stylelint": "stylelint \"**/*.css **/*.sass **/*.scss\"",
     "lint": "yarn eslint && yarn tslint && yarn stylelint",
-    "clean": "trash frontend/dist .awcache coverage",
     "test": "jest --no-cache --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "deploy": "heroku container:push web"
@@ -34,41 +36,38 @@
     "@types/jest": "^23.3.0",
     "@types/materialize-css": "^1.0.4",
     "@types/prismjs": "^1.9.0",
-    "@types/react": "^16.4.6",
+    "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.4",
-    "@types/react-router-dom": "^4.2.7",
-    "@types/redux-devtools": "^3.0.44",
-    "@types/redux-devtools-dock-monitor": "^1.1.32",
-    "@types/redux-devtools-log-monitor": "^1.0.33",
+    "@types/react-redux": "^6.0.5",
+    "@types/react-router-dom": "^4.3.0",
     "@types/redux-logger": "^3.0.6",
-    "@types/superagent": "^3.8.2",
     "@types/uuid": "^3.4.3",
     "@types/webpack-env": "^1.13.6",
     "add-asset-html-webpack-plugin": "^2.1.3",
     "awesome-typescript-loader": "^5.2.0",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
-    "colors": "^1.3.0",
+    "colors": "^1.3.1",
     "commitlint": "^7.0.0",
     "commitlint-config-armour": "^1.1.0",
     "compression": "^1.7.3",
+    "concurrently": "^3.6.1",
     "connect-redis": "^3.3.3",
     "connected-react-router": "^4.3.0",
     "cookie-parser": "^1.4.3",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.0.2",
+    "cssnano": "^4.0.3",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "eslint": "^5.1.0",
+    "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.13.0",
@@ -77,26 +76,25 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "file-loader": "^1.1.11",
-    "helmet": "^3.12.1",
+    "helmet": "^3.13.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
+    "http-status": "^1.2.0",
     "husky": "1.0.0-rc.13",
     "image-webpack-loader": "^4.3.1",
     "immutable": "4.0.0-rc.9",
     "jest": "^23.4.1",
-    "material-design-icons": "^3.0.1",
     "materialize-css": "1.0.0-rc.2",
     "mini-css-extract-plugin": "^0.4.1",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "offline-plugin": "^5.0.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "pg": "^7.4.3",
-    "postcss": "^7.0.0",
+    "postcss": "^7.0.1",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
-    "postcss-preset-env": "^5.2.2",
+    "postcss-preset-env": "^5.3.0",
     "prismjs": "^1.15.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "react": "^16.4.1",
@@ -105,32 +103,24 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-devtools": "^3.4.1",
-    "redux-devtools-dock-monitor": "^1.1.3",
-    "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "run-sequence": "^2.2.1",
+    "redux-saga": "^0.16.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
-    "superagent": "^3.8.3",
     "trash-cli": "^1.4.0",
     "ts-jest": "^23.0.1",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "typescript": "^2.9.2",
-    "uglify-js": "^3.4.5",
-    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "uuid": "^3.3.2",
-    "webpack": "^4.16.1",
+    "webpack": "^4.16.2",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.3",
     "webpack-pwa-manifest": "^3.6.2"
   },
@@ -139,7 +129,6 @@
     "last 2 versions"
   ],
   "nodemonConfig": {
-    "quiet": true,
     "watch": [
       "backend/controllers/",
       "backend/routes/",
