--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dll": "cross-env NODE_ENV=production webpack --config webpack.config.dll.babel.js",
     "dev": "yarn clean && yarn dll && concurrently --raw \"yarn dev-server\" \"yarn dev-client\"",
     "dev-server": "cross-env NODE_ENV=development nodemon --exec babel-node backend/server.js",
-    "dev-client": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.babel.js",
+    "dev-client": "cross-env NODE_ENV=development webpack-dev-server --hot --config webpack.config.dev.babel.js",
     "prod": "yarn build && yarn serve",
     "build": "yarn clean && yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.prod.babel.js",
     "serve": "cross-env NODE_ENV=production nodemon --exec babel-node backend/server.js",
