--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     }
   },
   "dependencies": {
-    "@types/jest": "^23.3.0",
+    "@types/jest": "^23.3.1",
     "@types/materialize-css": "^1.0.4",
     "@types/prismjs": "^1.9.0",
     "@types/react": "^16.4.7",
@@ -56,7 +56,7 @@
     "body-parser": "^1.18.3",
     "colors": "^1.3.1",
     "commitlint": "^7.0.0",
-    "commitlint-config-armour": "^1.1.0",
+    "commitlint-config-armour": "^1.2.0",
     "compression": "^1.7.3",
     "concurrently": "^3.6.1",
     "connect-redis": "^3.3.3",
@@ -65,7 +65,7 @@
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.0.3",
+    "cssnano": "^4.0.4",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -83,7 +83,7 @@
     "husky": "1.0.0-rc.13",
     "image-webpack-loader": "^4.3.1",
     "immutable": "4.0.0-rc.9",
-    "jest": "^23.4.1",
+    "jest": "^23.4.2",
     "materialize-css": "1.0.0-rc.2",
     "mini-css-extract-plugin": "^0.4.1",
     "morgan": "^1.9.0",
@@ -99,7 +99,7 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.3",
+    "react-hot-loader": "^4.3.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
@@ -107,7 +107,7 @@
     "redux-saga": "^0.16.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "stylelint": "^9.3.0",
+    "stylelint": "^9.4.0",
     "stylelint-config-standard": "^18.2.0",
     "trash-cli": "^1.4.0",
     "ts-jest": "^23.0.1",
@@ -117,12 +117,12 @@
     "typescript": "^2.9.2",
     "url-loader": "^1.0.1",
     "uuid": "^3.3.2",
-    "webpack": "^4.16.2",
+    "webpack": "^4.16.3",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.3",
-    "webpack-pwa-manifest": "^3.6.2"
+    "webpack-pwa-manifest": "^3.6.3"
   },
   "browserslist": [
     "> 1%",
@@ -138,6 +138,7 @@
     ]
   },
   "jest": {
+    "testEnvironment": "node",
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
