--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     }
   },
   "dependencies": {
-    "@types/jest": "^23.3.1",
     "@types/materialize-css": "^1.0.4",
     "@types/prismjs": "^1.9.0",
     "@types/react": "^16.4.7",
@@ -55,24 +54,16 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "colors": "^1.3.1",
-    "commitlint": "^7.0.0",
-    "commitlint-config-armour": "^1.2.0",
     "compression": "^1.7.3",
     "concurrently": "^3.6.1",
     "connect-redis": "^3.3.3",
     "connected-react-router": "^4.3.0",
     "cookie-parser": "^1.4.3",
-    "coveralls": "^3.0.2",
+    "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.4",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "eslint": "^5.2.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "file-loader": "^1.1.11",
@@ -80,10 +71,8 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "http-status": "^1.2.0",
-    "husky": "1.0.0-rc.13",
     "image-webpack-loader": "^4.3.1",
     "immutable": "4.0.0-rc.9",
-    "jest": "^23.4.2",
     "materialize-css": "1.0.0-rc.2",
     "mini-css-extract-plugin": "^0.4.1",
     "morgan": "^1.9.0",
@@ -107,22 +96,36 @@
     "redux-saga": "^0.16.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "stylelint": "^9.4.0",
-    "stylelint-config-standard": "^18.2.0",
     "trash-cli": "^1.4.0",
-    "ts-jest": "^23.0.1",
     "ts-loader": "^4.4.2",
-    "tslint": "^5.11.0",
-    "tslint-react": "^3.6.0",
     "typescript": "^2.9.2",
     "url-loader": "^1.0.1",
     "uuid": "^3.3.2",
     "webpack": "^4.16.3",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.3",
     "webpack-pwa-manifest": "^3.6.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.1",
+    "commitlint": "^7.0.0",
+    "commitlint-config-armour": "^1.2.0",
+    "coveralls": "^3.0.2",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "husky": "1.0.0-rc.13",
+    "jest": "^23.4.2",
+    "stylelint": "^9.4.0",
+    "stylelint-config-standard": "^18.2.0",
+    "ts-jest": "^23.0.1",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "browserslist": [
     "> 1%",
