Docs(github): update github related docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
-    "strict": true,
+    "strict": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.spec.tsx"
   ]
 }
