--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "serve": "cross-env NODE_ENV=production nodemon --exec babel-node backend/server.js",
     "profile": "yarn clean && yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.profile.babel.js",
     "eslint": "eslint -f codeframe \"**/*.js\"",
-    "tslint": "tslint -t codeFrame \"**/*.tsx\"",
+    "tslint": "tslint -t codeFrame \"**/*.tsx\" \"**/*.d.ts\" -e \"node_modules/**\"",
     "stylelint": "stylelint \"**/*.css **/*.sass **/*.scss\"",
     "lint": "yarn eslint && yarn tslint && yarn stylelint",
     "test": "jest --no-cache --coverage",
@@ -38,6 +38,7 @@
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.6",
+    "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
     "@types/redux-logger": "^3.0.6",
     "@types/uuid": "^3.4.3",
@@ -57,7 +58,7 @@
     "compression": "^1.7.3",
     "concurrently": "^3.6.1",
     "connect-redis": "^3.3.3",
-    "connected-react-router": "^4.3.0",
+    "connected-react-router": "^4.4.1",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
@@ -90,6 +91,7 @@
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
@@ -105,17 +107,17 @@
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4",
-    "webpack-pwa-manifest": "^3.6.3"
+    "webpack-pwa-manifest": "^3.7.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
     "commitlint": "^7.0.0",
-    "commitlint-config-armour": "^1.2.0",
+    "commitlint-config-armour": "^1.2.1",
     "coveralls": "^3.0.2",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "husky": "1.0.0-rc.13",
