--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@types/materialize-css": "^1.0.4",
     "@types/prismjs": "^1.9.0",
     "@types/react": "^16.4.9",
+    "@types/react-content-loader": "^3.1.3",
     "@types/react-dom": "^16.0.7",
+    "@types/react-loadable": "^5.4.1",
     "@types/react-redux": "^6.0.6",
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
@@ -88,8 +90,10 @@
     "prismjs": "^1.15.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "react": "^16.4.2",
+    "react-content-loader": "^3.1.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
+    "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
