--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     }
   },
   "dependencies": {
+    "@types/i18next": "^8.4.4",
+    "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/materialize-css": "^1.0.4",
     "@types/prismjs": "^1.9.0",
     "@types/react": "^16.4.9",
     "@types/react-content-loader": "^3.1.3",
     "@types/react-dom": "^16.0.7",
+    "@types/react-i18next": "^7.8.2",
     "@types/react-loadable": "^5.4.1",
     "@types/react-redux": "^6.0.6",
     "@types/react-router": "^4.0.30",
@@ -74,6 +77,8 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "http-status": "^1.2.0",
+    "i18next": "^11.6.0",
+    "i18next-browser-languagedetector": "^2.2.3",
     "image-webpack-loader": "^4.3.1",
     "immutable": "4.0.0-rc.9",
     "materialize-css": "1.0.0-rc.2",
@@ -93,6 +98,7 @@
     "react-content-loader": "^3.1.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
+    "react-i18next": "^7.10.1",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
