--- a/package.json
+++ b/package.json
@@ -33,11 +33,16 @@
     }
   },
   "dependencies": {
-    "@types/i18next": "^8.4.4",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@types/i18next": "^8.4.5",
     "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/materialize-css": "^1.0.4",
     "@types/prismjs": "^1.9.0",
-    "@types/react": "^16.4.11",
+    "@types/react": "^16.4.13",
     "@types/react-content-loader": "^3.1.3",
     "@types/react-dom": "^16.0.7",
     "@types/react-i18next": "^7.8.2",
@@ -46,23 +51,17 @@
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
     "@types/redux-logger": "^3.0.6",
-    "@types/uuid": "^3.4.3",
+    "@types/uuid": "^3.4.4",
     "@types/webpack-env": "^1.13.6",
     "add-asset-html-webpack-plugin": "^2.1.3",
     "awesome-typescript-loader": "^5.2.0",
     "axios": "^0.18.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.2",
     "babel-plugin-prismjs": "^1.0.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "colors": "^1.3.2",
     "compression": "^1.7.3",
-    "concurrently": "^4.0.0",
+    "concurrently": "^4.0.1",
     "connect-redis": "^3.3.3",
     "connected-react-router": "^4.4.1",
     "cookie-parser": "^1.4.3",
@@ -86,7 +85,7 @@
     "mini-css-extract-plugin": "^0.4.2",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.3",
-    "nodemon": "^1.18.3",
+    "nodemon": "^1.18.4",
     "offline-plugin": "^5.0.5",
     "pg": "^7.4.3",
     "postcss": "^7.0.2",
@@ -99,7 +98,7 @@
     "react-content-loader": "^3.1.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.5",
-    "react-i18next": "^7.11.0",
+    "react-i18next": "^7.11.1",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -108,25 +107,27 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
+    "style-loader": "^0.23.0",
     "trash-cli": "^1.4.0",
-    "ts-loader": "^4.5.0",
-    "typescript": "^3.0.1",
+    "ts-loader": "^5.0.0",
+    "typescript": "^3.0.3",
     "url-loader": "^1.1.1",
     "uuid": "^3.3.2",
-    "webpack": "^4.17.1",
+    "webpack": "^4.17.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4",
     "webpack-pwa-manifest": "^3.7.1"
   },
   "devDependencies": {
+    "@babel/node": "^7.0.0",
     "@types/jest": "^23.3.1",
     "@types/react-test-renderer": "^16.0.2",
-    "commitlint": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "commitlint": "^7.1.1",
     "commitlint-config-armour": "^1.2.1",
     "coveralls": "^3.0.2",
-    "eslint": "^5.4.0",
+    "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.14.0",
@@ -141,7 +142,7 @@
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
-    "webpack-dev-server": "^3.1.6"
+    "webpack-dev-server": "^3.1.7"
   },
   "browserslist": [
     "> 1%",
