Fix(webfont): use cloudflare hosted webfont.js for China region support

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,7 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true,
-    "jquery": true
+    "es6": true
   },
   "extends": [
     "airbnb"
