--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "serve": "cross-env NODE_ENV=production nodemon --exec babel-node backend/server.js",
     "profile": "yarn clean && yarn dll && cross-env NODE_ENV=production webpack --config webpack.config.profile.babel.js",
     "eslint": "eslint -f codeframe \"**/*.js\"",
-    "tslint": "tslint -t codeFrame \"**/*.tsx\" \"**/*.d.ts\" -e \"node_modules/**\" -e \"**/__tests__/**\"",
+    "tslint": "tslint -t codeFrame -c tslint.json \"**/*.tsx\" \"**/*.d.ts\"",
     "stylelint": "stylelint \"**/*.css **/*.sass **/*.scss\"",
     "lint": "yarn eslint && yarn tslint && yarn stylelint",
     "test": "jest --no-cache --coverage",
@@ -38,7 +38,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@types/i18next": "^8.4.5",
+    "@types/i18next": "^11.9.0",
     "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/materialize-css": "^1.0.4",
     "@types/prismjs": "^1.9.0",
@@ -63,12 +63,12 @@
     "compression": "^1.7.3",
     "concurrently": "^4.0.1",
     "connect-redis": "^3.3.3",
-    "connected-react-router": "^4.4.1",
+    "connected-react-router": "^4.5.0",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.1.0",
+    "cssnano": "^4.1.3",
     "dotenv-webpack": "^1.5.7",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "express": "^4.16.3",
@@ -81,25 +81,25 @@
     "i18next": "^11.9.0",
     "i18next-browser-languagedetector": "^2.2.3",
     "image-webpack-loader": "^4.3.1",
-    "immutable": "4.0.0-rc.9",
+    "immutable": "4.0.0-rc.10",
     "materialize-css": "1.0.0",
-    "mini-css-extract-plugin": "^0.4.2",
+    "mini-css-extract-plugin": "^0.4.3",
     "morgan": "^1.9.1",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "offline-plugin": "^5.0.5",
     "pg": "^7.4.3",
-    "postcss": "^7.0.2",
+    "postcss": "^7.0.3",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^5.3.0",
+    "postcss-preset-env": "^6.0.6",
     "prismjs": "^1.15.0",
     "progress-bar-webpack-plugin": "^1.11.0",
-    "react": "^16.5.1",
+    "react": "^16.5.2",
     "react-content-loader": "^3.1.2",
-    "react-dom": "^16.5.1",
-    "react-hot-loader": "^4.3.8",
-    "react-i18next": "^7.12.0",
+    "react-dom": "^16.5.2",
+    "react-hot-loader": "^4.3.11",
+    "react-i18next": "^7.13.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -110,13 +110,13 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "trash-cli": "^1.4.0",
-    "ts-loader": "^5.1.1",
+    "ts-loader": "^5.2.1",
     "typescript": "^3.0.3",
     "url-loader": "^1.1.1",
     "uuid": "^3.3.2",
-    "webpack": "^4.19.0",
+    "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-cli": "^3.1.0",
+    "webpack-cli": "^3.1.1",
     "webpack-merge": "^4.1.4",
     "webpack-pwa-manifest": "^3.7.1"
   },
@@ -136,16 +136,16 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "1.0.0-rc.14",
+    "husky": "1.0.0-rc.15",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "react-test-renderer": "^16.5.1",
+    "react-test-renderer": "^16.5.2",
     "stylelint": "^9.5.0",
     "stylelint-config-standard": "^18.2.0",
-    "ts-jest": "^23.1.4",
+    "ts-jest": "^23.10.1",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.9"
   },
   "browserslist": [
     "> 1%",
@@ -161,16 +161,7 @@
     ]
   },
   "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|jsx|ts|tsx)$",
-    "testPathIgnorePatterns": [
-      "node_modules"
-    ],
-    "coveragePathIgnorePatterns": [
-      "node_modules"
-    ],
+    "preset": "ts-jest",
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.tsx",
       "\\.(css|less|scss|sass)$": "identity-obj-proxy"
