Build(yarn): update dependencies

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tslint": "tslint -t codeFrame -c tslint.json \"**/*.tsx\" \"**/*.d.ts\"",
     "stylelint": "stylelint \"**/*.css **/*.sass **/*.scss\"",
     "lint": "yarn eslint && yarn tslint && yarn stylelint",
-    "test": "jest --no-cache --coverage",
+    "test": "jest --runInBand --coverage",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "deploy": "heroku container:push web"
   },
@@ -33,8 +33,8 @@
     }
   },
   "dependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
@@ -56,13 +56,13 @@
     "add-asset-html-webpack-plugin": "^3.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.18.0",
-    "babel-loader": "^8.0.3",
+    "babel-loader": "^8.0.4",
     "babel-plugin-prismjs": "^1.0.2",
     "body-parser": "^1.18.3",
     "colors": "^1.3.2",
     "compression": "^1.7.3",
     "concurrently": "^4.0.1",
-    "connect-redis": "^3.3.3",
+    "connect-redis": "^3.4.0",
     "connected-react-router": "^4.5.0",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.5.2",
@@ -88,18 +88,18 @@
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "offline-plugin": "^5.0.5",
-    "pg": "^7.4.3",
-    "postcss": "^7.0.4",
+    "pg": "^7.5.0",
+    "postcss": "^7.0.5",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.0.7",
+    "postcss-preset-env": "^6.0.10",
     "prismjs": "^1.15.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "react": "^16.5.2",
-    "react-content-loader": "^3.1.2",
+    "react-content-loader": "^3.2.0",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
-    "react-i18next": "^7.13.0",
+    "react-i18next": "^8.0.6",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -116,33 +116,33 @@
     "uuid": "^3.3.2",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-cli": "^3.1.1",
+    "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4",
     "webpack-pwa-manifest": "^3.7.1"
   },
   "devDependencies": {
     "@babel/node": "^7.0.0",
-    "@types/jest": "^23.3.2",
-    "@types/react-test-renderer": "^16.0.2",
+    "@types/jest": "^23.3.3",
+    "@types/react-test-renderer": "^16.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "commitlint": "^7.1.2",
     "commitlint-config-armour": "^1.2.1",
     "coveralls": "^3.0.2",
     "dotenv": "^6.0.0",
-    "eslint": "^5.6.0",
+    "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "1.0.1",
+    "husky": "1.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.5.2",
     "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0",
-    "ts-jest": "^23.10.2",
+    "ts-jest": "^23.10.3",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "webpack-dev-server": "^3.1.9"
